Optimized JVM options.