@@ -9,7 +9,9 @@ function log() {
     [wW]*) local _level=W; local _color=33 ;;
     *)     local _level=I; local _color= ;;
   esac
-  echo -e "\e[${_color}m[$(date -u)] ${TAG} ${_level}: ${@:1}\e[m"
+  printf "\e[${_color}m"
+  echo -e "[$(date -u)] ${TAG} ${_level}: ${@:1}"
+  printf "\e[m"
 }
 
 HOME=/home/minecraft
@@ -69,7 +71,7 @@ fi
 
 function installVanilla {
   log I "Installing the vanilla server for '$VERSION'."
-  printf "Downloading '$VANILLA_VERSION_INFO_URL' ..."
+  log I "Downloading '$VANILLA_VERSION_INFO_URL' ..."
   local _info_json="/tmp/vanilla-$VANILLA_VERSION.json"
   wget -q -O $_info_json $VANILLA_VERSION_INFO_URL
   local _info=$(jq -r '.downloads.server.url,.downloads.server.sha1' $_info_json)
@@ -79,9 +81,8 @@ function installVanilla {
     log E "Failed to get version $VERSION information."
     exit 1
   fi
-  log I "done"
 
-  printf "Downloading '$_url' ..."
+  log I "Downloading '$_url' ..."
   wget -q -O $SERVER_JAR $_url
   local _check_sha1=$(sha1sum $SERVER_JAR | awk '{ print $1 }')
   if [ "$_check_sha1" != "$_sha1" ]; then
@@ -91,7 +92,7 @@ function installVanilla {
     log E "Actual: $_check_sha1"
     exit 1
   fi
-  log I "done"
+  echo "$VERSION" > '.install_successfully'
   log I "Installation is completed."
 }
 
@@ -124,12 +125,84 @@ if [ -n "$WHITELIST" -a ! -e white-list.txt.converted ]; then
   echo $WHITELIST | awk -v RS=, '{print}' >> white-list.txt
 fi
 
-log I "Setting initial memory to ${INIT_MEMORY:-${MEMORY}} and max to ${MAX_MEMORY:-${MEMORY}}"
-JVM_OPTS="-Xms${INIT_MEMORY:-${MEMORY}} -Xmx${MAX_MEMORY:-${MEMORY}} ${JVM_OPTS}"
+_jvm_opts_for_optimized="
+  -XX:+UnlockExperimentalVMOptions
+  -XX:+UseCGroupMemoryLimitForHeap
+  -XX:+DisableExplicitGC
+  -XX:+UseParNewGC
+  -XX:+UseNUMA
+  -XX:+CMSParallelRemarkEnabled
+  -XX:+UseAdaptiveGCBoundary
+  -XX:+UseBiasedLocking
+  -XX:+UseFastAccessorMethods
+  -XX:+UseCompressedOops
+  -XX:+OptimizeStringConcat
+  -XX:+AggressiveOpts
+  -XX:+UseCodeCacheFlushing
+  -XX:-UseGCOverheadLimit
+  -XX:MaxTenuringThreshold=15
+  -XX:MaxGCPauseMillis=30
+  -XX:GCPauseIntervalMillis=150
+  -XX:ReservedCodeCacheSize=2048m
+  -XX:SoftRefLRUPolicyMSPerMB=2000
+  -XX:ParallelGCThreads=10
+  -Dfml.ignorePatchDiscrepancies=true
+  -Dfml.ignoreInvalidMinecraftCertificates=true
+"
+
+# For Alpine on Docker.
+function _metric_alpine_docker() {
+  _meminfo_KB=$(cat /proc/meminfo | grep MemTotal | awk '{print $2}')
+  _meminfo=$(expr $_meminfo_KB \* 1024)
+  _memlimit=$(cat /sys/fs/cgroup/memory/memory.limit_in_bytes)
+}
+
+JVM_OPTS=${JVM_OPTS:-auto}
+if [ "$JVM_OPTS" = auto ]; then
+  log I "Automatically configured JVM options ..."
+  _metric_alpine_docker
+  _meminfo_MB=$(expr $_meminfo / 1024 / 1024)
+  _memlimit_MB=$(expr $_memlimit / 1024 / 1024)
+  log I "MemTotal $_meminfo_MB MB"
+  log I "MemLimit $_memlimit_MB MB"
+  # 100TB RAM??? -> no limit
+  if [ $_memlimit_MB -ge 100000 ]; then
+    _max_memory_size=$_meminfo_MB
+  else
+    _max_memory_size=$_memlimit_MB
+  fi
+  _jvm_recommend_memory_size="$(expr $_max_memory_size \* 9 / 10)M"
+  if [ $_max_memory_size -ge 3072 ]; then
+    _jvm_recommend_gc_type=G1GC
+  else
+    _jvm_recommend_gc_type=ConcMarkSweepGC
+  fi
+  log I "Recommended initialization and maximum heap memory size: ${_jvm_recommend_memory_size}B"
+  log I "Recommended GC type: ${_jvm_recommend_gc_type}"
+  JVM_MEMORY=${JVM_MEMORY:-$_jvm_recommend_memory_size}
+  JVM_INIT_MEMORY=${JVM_INIT_MEMORY:-$JVM_MEMORY}
+  JVM_MAX_MEMORY=${JVM_MAX_MEMORY:-$JVM_MEMORY}
+  case "X$JVM_GC" in
+    X               ) JVM_GC=$_jvm_recommend_gc_type ;;
+    XG1GC           ) JVM_GC=G1GC ;;
+    XConcMarkSweepGC) JVM_GC=ConcMarkSweepGC ;;
+    X*)
+      log E "Unknown JVM GC type: \$JVM_GC=$JVM_GC"
+      exit 1
+    ;;
+  esac
+  JVM_OPTS="
+    ${_jvm_opts_for_optimized}
+    -XX:+Use${JVM_GC}
+    -Xms${JVM_INIT_MEMORY}
+    -Xmx${JVM_MAX_MEMORY}"
+fi
+log I "JVM options: $(echo $JVM_OPTS | tr '\n' ' ')"
+log I "Starting server..."
 
 if [ -f "$SERVER_DIR/bootstrap.txt" ]; then
-  exec java $JVM_XX_OPTS $JVM_OPTS -jar $SERVER_JAR "$@" nogui < /data/bootstrap.txt
+  exec java $JVM_OPTS -jar $SERVER_JAR "$@" nogui < /data/bootstrap.txt
 else
-  exec java $JVM_XX_OPTS $JVM_OPTS -jar $SERVER_JAR "$@" nogui
+  exec java $JVM_OPTS -jar $SERVER_JAR "$@" nogui
 fi
 
